# Manim_Theoretical

./: LICENSE  Liverpool_Slides_Geometry copy.py  Liverpool_Slides_Refs copy.py  MANIFEST.in  README.md  __init__.py  characters.py  main_script.py  manim.cfg  setup.cfg  try.py  try_file.py
custom_animations/: README.md  __init__.py  ani_4D_pot_changes.py  ani_ads_jc.py  ani_bh_table_mov.py  ani_brane_bending.py  ani_energy_discussion.py  ani_expand_bubble.py  ani_g4_game.py  ani_scale_discussion.py  ani_set_scale.py
figures/: __init__.py
manim_theoretical/: __init__.py
manim_theoretical.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
manim_theoretical/custom_animations/: __init__.py  an_expand_bubble.py
manim_theoretical/objects/: __init__.py  obj_black_hole.py  obj_bubble.py  vmobject_2.py
objects/: __init__.py  bubble.py  obj_3duni.py  obj_ads_jc.py  obj_backreaction_diagram.py  obj_bending_brane.py  obj_black_hole.py  obj_bubble.py  obj_compvsdb.py  obj_energy_cost.py  obj_graph_4dcosmos.py  obj_graph_instanton.py  obj_graph_quantum.py  obj_photo.py  obj_postit.py  obj_scalemeter.py  obj_table_10d.py  obj_table_summary.py  vmobject_1.py  vmobject_2.py
old_stuff/: Liverpool_Slides_Geometry copy.py  refs.py
text/: __init__.py  blistbox.py  dialogue.py  equations.py  refs.py  title_create.py
