[metadata]
name = manim_theoretical
version = 1.0
author = Panizo
author_email = panizofisico@gmail.com
description = small package with object and specificic animations to generate string cosmology presentation slides.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PanoPepino/Manim_Theoretical
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

# This file is to display information when you invoke the package with pip show. It also encodes information about where to look for each of the modules. This is setup in options.
# This file is also linked with pyproject (to build the package) and MANIFEST, which loads files that are not .py ones (that is what I think)
# The process to install is as follows:
## 1) Update your src/manim_theoretical package. Do not forget to add the right extra hook __init__ if you create a new folder!
## 2) Update number of version, and add extra info to the README.stuff
## 3) load the package with pip install . This will build the package and install it!
## 4) Careful with pip-review --auto. It can install package that do not get along with manim!